--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,6 @@ spring:
       ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+  jwt:
+    secret: ${JWT_SECRET}
